security_groups.tf
resource "aws_security_group" "ec2-sg" {

  name        = "ec2-wordpress-sg"
  vpc_id      = aws_vpc.my-vpc.id
  description = "Allow HTTP and SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # restrict SSH
  }

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] # allow HTTP (IPv4)
    ipv6_cidr_blocks = ["::/0"]      # allow HTTP (IPv6)
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = merge(var.additional_tags,{
    name = "ec2-sg"
  })

}
